small template refactor to make timezones work

--- a/config/templates/form.html
+++ b/config/templates/form.html
@@ -7,7 +7,7 @@
     </div>
     <div>
         {{ formInputs.input("time", "Job Run Time", starttime, "starttime", "") }}
-        {{ formInputs.timeZone() }}
+        {{ formInputs.timeZone(timezone) }}
     </div>
     <button class="btn btn-warning btn-lg" id="submit-config" type="submit" value="Submit">Submit</button>
 </form>
